--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ exportMethods(addBaselineDivergence)
 exportMethods(addStepwiseDivergence)
 exportMethods(getBaselineDivergence)
 exportMethods(getStepwiseDivergence)
+import(TreeSummarizedExperiment)
+import(mia)
 importFrom(dplyr,arrange)
 importFrom(dplyr,group_by)
 importFrom(dplyr,lag)
