--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,4 +47,4 @@ BugReports: https://github.com/microbiome/miaTime/issues
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-VignetteBuilder: quarto
+VignetteBuilder: knitr
