--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,10 +6,10 @@ Authors@R:
      c(person(given = "Leo", family = "Lahti", role = c("aut"),
               email = "leo.lahti@iki.fi",
               comment = c(ORCID = "0000-0001-5537-637X")),
-       person(given = "Tuomas", family = "Borman", role = c("aut"),
+       person(given = "Tuomas", family = "Borman", role = c("aut", "cre"),
               email = "tuomas.v.borman@utu.fi",
               comment = c(ORCID = "0000-0002-8563-8884")),
-       person(given = "Yagmur", family = "Simsek", role = c("aut", "cre"),
+       person(given = "Yagmur", family = "Simsek", role = c("aut"),
               email = "yagmur.simsek@hsrw.org"),
        person(given = "Sudarshan", family = "Shetty", role = c("ctb"),
               email = "sudarshanshetty9@gmail.com"),
