--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,28 +1,28 @@
 Package: miaTime
 Type: Package
 Title: Microbiome Time Series Analysis
-Version: 0.1.23
+Version: 0.99.0
 Authors@R:
      c(person(given = "Leo", family = "Lahti", role = c("aut"),
               email = "leo.lahti@iki.fi",
               comment = c(ORCID = "0000-0001-5537-637X")),
-       person(given = "Yagmur", family = "Simsek", role = c("aut", "cre"),
+       person(given = "Tuomas", family = "Borman", role = c("aut", "cre"),
+              email = "tuomas.v.borman@utu.fi",
+              comment = c(ORCID = "0000-0002-8563-8884")),
+       person(given = "Yagmur", family = "Simsek", role = c("aut"),
               email = "yagmur.simsek@hsrw.org"),
        person(given = "Sudarshan", family = "Shetty", role = c("ctb"),
               email = "sudarshanshetty9@gmail.com"),
-       person(given = "Chouaib", family = "Benchraka", role=c("ctb")),
-       person(given = "Tuomas", family = "Borman", role = c("ctb"),
-              email = "tuomas.v.borman@utu.fi",
-              comment = c(ORCID = "0000-0002-8563-8884")),
-      person(given = "Muluh", family = "Muluh", role=c("ctb"))
+       person(given = "Chouaib", family = "Benchraka", role = c("ctb")),
+      person(given = "Muluh", family = "Muluh", role = c("ctb"))
         )
-Description: 
+Description:
     The `miaTime` package provides tools for microbiome time series analysis
     based on (Tree)SummarizedExperiment infrastructure.
-biocViews: Microbiome, Software, Sequencing, Coverage
+biocViews: Microbiome, Software, Sequencing
 License: Artistic-2.0 | file LICENSE
 Depends:
-    R (>= 4.0),
+    R (>= 4.4.0),
     mia
 Imports:
     dplyr,
@@ -31,7 +31,7 @@ Imports:
     SingleCellExperiment,
     SummarizedExperiment,
     TreeSummarizedExperiment
-Suggests: 
+Suggests:
     BiocStyle,
     devtools,
     ggplot2,
@@ -41,17 +41,10 @@ Suggests:
     rmarkdown,
     scater,
     testthat,
-    tidySingleCellExperiment,
-    tidySummarizedExperiment,
-    TreeSummarizedExperiment,
-    vegan,
-    zoo
-Remotes:
-    github::microbiome/mia
-Encoding: UTF-8
+    vegan
 URL: https://github.com/microbiome/miaTime
+BugReports: https://github.com/microbiome/miaTime/issues
+Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 VignetteBuilder: knitr
-LazyData: false
-Config/testthat/edition: 3
