update short term change
Signed-off-by: Daena Rys <rysdaena8@gmail.com>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,8 +25,7 @@ Depends:
     R (>= 4.4.0),
     ggplot2,
     mia,
-    SummarizedExperiment,,
-    mia
+    SummarizedExperiment
 Imports:
     dplyr,
     methods,
