--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,15 +3,25 @@
 export(addBaselineDivergence)
 export(addStepwiseDivergence)
 export(getBaselineDivergence)
+export(getShortTermChange)
 export(getStepwiseDivergence)
 exportMethods(addBaselineDivergence)
 exportMethods(addStepwiseDivergence)
 exportMethods(getBaselineDivergence)
+exportMethods(getShortTermChange)
 exportMethods(getStepwiseDivergence)
 import(TreeSummarizedExperiment)
 import(mia)
+importFrom(SummarizedExperiment,colData)
 importFrom(dplyr,arrange)
+importFrom(dplyr,as_tibble)
 importFrom(dplyr,group_by)
 importFrom(dplyr,lag)
 importFrom(dplyr,mutate)
+importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,ggplot)
+importFrom(ggrepel,geom_text_repel)
+importFrom(mia,rarefyAssay)
+importFrom(mia,transformAssay)
