--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ exportMethods(getStepwiseDivergence)
 import(TreeSummarizedExperiment)
 import(mia)
 importFrom(SummarizedExperiment,colData)
+importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,group_by)
