--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,8 +30,7 @@ Imports:
     S4Vectors,
     SingleCellExperiment,
     SummarizedExperiment,
-    TreeSummarizedExperiment,
-    quarto
+    TreeSummarizedExperiment
 Suggests:
     BiocStyle,
     devtools,
