--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,15 +3,21 @@
 export(addBaselineDivergence)
 export(addStepwiseDivergence)
 export(getBaselineDivergence)
+export(getBimodality)
 export(getStepwiseDivergence)
 exportMethods(addBaselineDivergence)
 exportMethods(addStepwiseDivergence)
 exportMethods(getBaselineDivergence)
+exportMethods(getBimodality)
 exportMethods(getStepwiseDivergence)
 import(TreeSummarizedExperiment)
 import(mia)
+importFrom(dplyr,across)
+importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,group_by)
 importFrom(dplyr,lag)
 importFrom(dplyr,mutate)
+importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
+importFrom(tidyr,pivot_wider)
