--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,4 +14,6 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,group_by)
 importFrom(dplyr,lag)
 importFrom(dplyr,mutate)
+importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
+importFrom(tidyr,unnest)
