--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,11 @@ exportMethods(addStepwiseDivergence)
 exportMethods(getBaselineDivergence)
 exportMethods(getBimodality)
 exportMethods(getStepwiseDivergence)
+import(S4Vectors)
+import(SingleCellExperiment)
+import(SummarizedExperiment)
 import(TreeSummarizedExperiment)
+import(methods)
 import(mia)
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
