--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,15 +2,19 @@
 
 export(addBaselineDivergence)
 export(addBimodality)
+export(addShortTermChange)
 export(addStepwiseDivergence)
 export(getBaselineDivergence)
 export(getBimodality)
+export(getShortTermChange)
 export(getStepwiseDivergence)
 exportMethods(addBaselineDivergence)
 exportMethods(addBimodality)
+exportMethods(addShortTermChange)
 exportMethods(addStepwiseDivergence)
 exportMethods(getBaselineDivergence)
 exportMethods(getBimodality)
+exportMethods(getShortTermChange)
 exportMethods(getStepwiseDivergence)
 import(S4Vectors)
 import(SingleCellExperiment)
@@ -21,10 +25,11 @@ import(mia)
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
-importFrom(dplyr,as_tibble)
 importFrom(dplyr,group_by)
 importFrom(dplyr,lag)
 importFrom(dplyr,mutate)
+importFrom(dplyr,select)
+importFrom(dplyr,summarise)
 importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
 importFrom(tidyr,pivot_wider)
