--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: miaTime
 Type: Package
 Title: Microbiome Time Series Analysis
-Version: 0.99.3
+Version: 0.99.4
 Authors@R:
      c(person(given = "Leo", family = "Lahti", role = c("aut"),
               email = "leo.lahti@iki.fi",
@@ -37,6 +37,7 @@ Imports:
 Suggests:
     BiocStyle,
     devtools,
+    ggplot2,
     knitr,
     lubridate,
     miaViz,
