Fix check errors

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,9 +23,7 @@ biocViews: Microbiome, Software, Sequencing
 License: Artistic-2.0 | file LICENSE
 Depends:
     R (>= 4.4.0),
-    ggplot2,
-    mia,
-    SummarizedExperiment
+    mia
 Imports:
     dplyr,
     methods,
