--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarize)
+importFrom(dplyr,sym)
 importFrom(dplyr,ungroup)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,unnest)
