--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(addStepwiseDivergence)
 export(getBaselineDivergence)
 export(getBimodality)
 export(getShortTermChange)
+export(getStability)
 export(getStepwiseDivergence)
 exportMethods(addBaselineDivergence)
 exportMethods(addBimodality)
@@ -15,6 +16,7 @@ exportMethods(addStepwiseDivergence)
 exportMethods(getBaselineDivergence)
 exportMethods(getBimodality)
 exportMethods(getShortTermChange)
+exportMethods(getStability)
 exportMethods(getStepwiseDivergence)
 import(S4Vectors)
 import(SingleCellExperiment)
