--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,7 +26,10 @@ import(methods)
 import(mia)
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
+importFrom(dplyr,all_vars)
 importFrom(dplyr,arrange)
+importFrom(dplyr,distinct)
+importFrom(dplyr,filter_at)
 importFrom(dplyr,group_by)
 importFrom(dplyr,lag)
 importFrom(dplyr,mutate)
@@ -35,5 +38,6 @@ importFrom(dplyr,summarise)
 importFrom(dplyr,summarize)
 importFrom(dplyr,sym)
 importFrom(dplyr,ungroup)
+importFrom(dplyr,vars)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,unnest)
