--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ import(mia)
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
 importFrom(dplyr,all_vars)
+importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter_at)
