--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(addBaselineDivergence)
 export(addBimodality)
 export(addShortTermChange)
+export(addStability)
 export(addStepwiseDivergence)
 export(getBaselineDivergence)
 export(getBimodality)
@@ -12,6 +13,7 @@ export(getStepwiseDivergence)
 exportMethods(addBaselineDivergence)
 exportMethods(addBimodality)
 exportMethods(addShortTermChange)
+exportMethods(addStability)
 exportMethods(addStepwiseDivergence)
 exportMethods(getBaselineDivergence)
 exportMethods(getBimodality)
@@ -32,13 +34,19 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter_at)
 importFrom(dplyr,group_by)
+importFrom(dplyr,if_else)
 importFrom(dplyr,lag)
 importFrom(dplyr,mutate)
+importFrom(dplyr,rename_with)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarize)
 importFrom(dplyr,sym)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
+importFrom(stats,coef)
+importFrom(stats,lm)
+importFrom(stats,median)
+importFrom(stats,setNames)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,unnest)
