--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,18 +3,22 @@
 export(addBaselineDivergence)
 export(addBimodality)
 export(addShortTermChange)
+export(addStability)
 export(addStepwiseDivergence)
 export(getBaselineDivergence)
 export(getBimodality)
 export(getShortTermChange)
+export(getStability)
 export(getStepwiseDivergence)
 exportMethods(addBaselineDivergence)
 exportMethods(addBimodality)
 exportMethods(addShortTermChange)
+exportMethods(addStability)
 exportMethods(addStepwiseDivergence)
 exportMethods(getBaselineDivergence)
 exportMethods(getBimodality)
 exportMethods(getShortTermChange)
+exportMethods(getStability)
 exportMethods(getStepwiseDivergence)
 import(S4Vectors)
 import(SingleCellExperiment)
@@ -24,14 +28,25 @@ import(methods)
 import(mia)
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
+importFrom(dplyr,all_vars)
+importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
+importFrom(dplyr,distinct)
+importFrom(dplyr,filter_at)
 importFrom(dplyr,group_by)
+importFrom(dplyr,if_else)
 importFrom(dplyr,lag)
 importFrom(dplyr,mutate)
+importFrom(dplyr,rename_with)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarize)
 importFrom(dplyr,sym)
 importFrom(dplyr,ungroup)
+importFrom(dplyr,vars)
+importFrom(stats,coef)
+importFrom(stats,lm)
+importFrom(stats,median)
+importFrom(stats,setNames)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,unnest)
